so_plumes/build/genmake.log
Get compiler version using: ifort --version
/albedo/soft/sw/spack-sw/intel-oneapi-compilers/2022.1.0-kwhaebe/compiler/2022.1.0/linux/bin/intel64/ifort
ifort (IFORT) 2021.6.0 20220226
Copyright (C) 1985-2022 Intel Corporation.  All rights reserved.

<-- compiler version ----

running: check_fortran_compiler
 ifort -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -c genmake_tcomp.f
 ifort -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -o genmake_tcomp genmake_tcomp.o
 ./genmake_tcomp
 hello world :            1
 hello world :            2
 hello world :            3
 --> set FC_CHECK= 5 /5

running: look_for_makedepend()
 --> set MAKEDEPEND=$(TOOLSDIR)/xmakedepend

running: check_HAVE_CLOC()
 running: get_fortran_c_namemangling()
 icc -O0 -fPIC -ip -c genmake_test.c
genmake_test.c(1): warning #266: function "tsub" declared implicitly
  void tcall( char * string ) { tsub( string ); }
                                ^

 ifort -W0 -WB -convert big_endian -assume byterecl -fPIC -c genmake_tcomp.f
 --> set FC_NAMEMANGLE='#define FC_NAMEMANGLE(X)  X ## _'
icc -O0 -fPIC -ip -c genmake_tc_1.c
ifort -W0 -WB -convert big_endian -assume byterecl -fPIC -o genmake_tc genmake_tc_2.f genmake_tc_1.o
  HELLO WORLD   1735209834.93161     
 --> set HAVE_CLOC='t'

running: check_HAVE_SETRLSTK()
icc -O0 -fPIC -ip -c genmake_tc_1.c
      program hello
      external setrlstk
      call setrlstk()
      end
ifort -W0 -WB -convert big_endian -assume byterecl -fPIC -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SETRLSTK='t'

running: check_HAVE_SIGREG()
icc -O0 -fPIC -ip -c genmake_tc_1.c
genmake_tc_1.c(11): warning #274: declaration is not visible outside of function
      unsigned int sn, siginfo_t  si, struct ucontext *sc )
                                             ^

      program hello
      integer anint
      common /iv/ anint
      external sigreg
      call sigreg(anint)
      end
ifort -W0 -WB -convert big_endian -assume byterecl -fPIC -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SIGREG='t'

running: check_HAVE_STAT()
icc -O0 -fPIC -ip -c genmake_tc_1.c
      program hello
      integer nbyte
      call tfsize(nbyte)
      print *," HELLO WORLD", nbyte
      end
ifort -W0 -WB -convert big_endian -assume byterecl -fPIC -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_STAT='t'

running: check_netcdf_libs()
===  genmake_tnc.F  >>>
      program fgennc
#include "netcdf.inc"
      integer iret, ncid, xid
      iret = nf_create('genmake_tnc.nc', NF_CLOBBER, ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_def_dim(ncid, 'X', 11, xid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_close(ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      end
<<<  genmake_tnc.F  ===
cat genmake_tnc.F |  cpp -traditional -P -DWORDLENGTH=4 -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_FCT -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT 
  WARNING: CPP failed to pre-process the netcdf test.
    Please check that $INCLUDES is properly set.
ifort  -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -c genmake_tnc.f  \ 
  &&  ifort  -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -o genmake_tnc genmake_tnc.o 
genmake_tnc.f(12): error #5082: Syntax error, found END-OF-FILE when expecting one of: <LABEL> <END-OF-STATEMENT> ; <IDENTIFIER> TYPE MODULE ELEMENTAL IMPURE NON_RECURSIVE ...
      program fgennc
--------------------^
compilation aborted for genmake_tnc.f (code 1)

==> try again with added '-lnetcdf'
cat genmake_tnc.F |  cpp -traditional -P -DWORDLENGTH=4 -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_FCT -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT  > genmake_tnc.f \ 
 &&  ifort  -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -c genmake_tnc.f \ 
 &&  ifort  -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -o genmake_tnc genmake_tnc.o  -lnetcdf

==> try again with added '-lnetcdff -lnetcdf'
cat genmake_tnc.F |  cpp -traditional -P -DWORDLENGTH=4 -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_FCT -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT  > genmake_tnc.f \ 
 &&  ifort  -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -c genmake_tnc.f \ 
 &&  ifort  -W0 -WB -convert big_endian -assume byterecl -fPIC -ip -align -O3 -no-prec-div -fp-model fast=2 -march=core-avx2 -mtune=core-avx2 -qopt-prefetch=5 -unroll-aggressive -o genmake_tnc genmake_tnc.o  -lnetcdff -lnetcdf
 --> set HAVE_NETCDF=''

running: check_HAVE_FLUSH()
  check_HAVE_FLUSH: successful
 --> set HAVE_FLUSH='t'
